--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "StartPoint",
-  "version": "1.0.0",
-  "description": "A Simple Startpage",
-  "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "start": "npm-run-all --parallel watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "start": "snowpack dev",
+    "build": "snowpack build",
+    "test": "echo \"This template does not include a test runner by default.\" && exit 1",
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint": "prettier --check \"src/**/*.js\""
   },
-  "author": "Miguel R. Ávila",
-  "license": "ISC",
+  "dependencies": {
+    "feather-icons": "^4.28.0",
+    "moment": "^2.27.0",
+    "openweathermap-ts": "^1.2.7"
+  },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "concat": "^1.0.3",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.1.1",
-    "postcss-cli": "^4.1.1"
+    "@snowpack/plugin-dotenv": "^2.0.0",
+    "@snowpack/plugin-run-script": "^2.0.4",
+    "@types/feather-icons": "^4.7.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "snowpack": "^2.7.7",
+    "typescript": "^3.9.7"
   }
 }
