--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,39 @@
 {
-	"compilerOptions": {
-		"module": "es6",
-		"target": "es6",
-		"moduleResolution": "node",
-		"jsx": "preserve",
-		"allowSyntheticDefaultImports": true,
-		"importsNotUsedAsValues": "error",
-		/* more strict checking for errors that per-file transpilers like `esbuild` would crash */
-		"isolatedModules": true,
-		/* noEmit - We only use TypeScript for type checking. */
-		"noEmit": true,
-		/* Additional Options */
-		"strict": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"useDefineForClassFields": true,
-
-		// You can't currently define paths in your 'extends' config,
-		// so we have to set 'baseUrl' & 'paths' here.
-		// Don't change these unless you know what you're doing.
-		// See: https://github.com/microsoft/TypeScript/issues/25430
-		"baseUrl": "./",
-		"paths": { "*": ["web_modules/.types/*"] }
-	},
-	"include": ["src", "types"],
-	"exclude": ["node_modules"]
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "types": [
+      "webpack-env"
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
