--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "feather-icons": "^4.28.0",
+    "openweathermap-ts": "^1.2.10",
+    "vue": "^3.0.0",
+    "vue-feather": "^2.0.0-rc"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
